# rva-active-call-tweetbot

./: LICENSE  README.md  pyproject.toml
src/rva_active_call_tweetbot/: get_active_call_data.py  scraping.py
tests/: conftest.py  test_get_active_call_data.py
