[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "rva_active_call_tweetbot"
author = "Mike Alfare"
author-email = "alfare@gmail.com"
home-page = "https://github.com/fivestack/rva-active-call-tweetbot"

requires = [
    "lxml>=4.5,<5.0",
    "pandas>=1.0,<2.0"
]
requires-python = ">=3.8,<4.0"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: POSIX :: Linux",
    "Topic :: Twitter"
]

keywords = "rva active calls twitter"

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=5.4,<6.0"
]
